@@ -180,3 +180,8 @@ option MoreTraits.MartialWeapons
 	type = boolean, default = false,
 	page = MoreTraits, translation = MoreTraits_MartialWeapons,
 }
+option MoreTraits.AntiqueChance
+{
+	type = integer, min = 100, max = 10000, default = 1000,
+	page = MoreTraits, translation = MoreTraits_AntiqueChance,
+}
